# python-zbase32

./: .dictionary  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: ci.yaml  release-please.yml
.github/workflows/: release-please.yml  tests.yaml
src/: zbase32.py
src/zbase32/: __init__.py
tests/: __init__.py  test_zbase32.py
