[tool.poetry]
name = "python-zbase32"
version = "0.1.1"
description = "A human-oriented base-32 encoding."
authors = ["Daniel Knell <contact@danielknell.co.uk>"]
packages = [
    {include = "zbase32", from = "src"}
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/artisanofcode/python-zbase32"


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.23.4"
pre-commit = "^2.15.0"
shed = "^0.5.3"
mypy = "^0.910"
pylint = "^2.11.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
